ignore coverage report files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Optimized files
+__pycache__
+
+# Distribution/packaging
 dist/
 *.egg
 *.egg-info
+
+# Coverage reports
+htmlcov/
+cover/
+.coverage
+.cache
+*,cover
+
+# virtualenv
+env/
